html/css/employment.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');

.employment-app {
    display: none;
    height: 100%;
    width: 100%;
    background-color: #212832;
    overflow: hidden;
}

.employment-header {
    position: absolute;
    width: 100%;
    height: 9.5vh;
    top: 0.7vh;
    text-align: center;
}

#employment-search-text {
    position: absolute;
    top: 4.7vh;
    left: 2vh;
    font-family: 'Roboto', sans-serif;
    font-size: 1.2vh;
    color: #FFFFFF;
}
#employment-search-icon {
    position: absolute;
    top: 7.3vh;
    left: 2vh;
    font-size: 1.4vh;
    color: #FFFFFF;
}
#employment-search {
    display: block;
    position: absolute;
    background: none;
    border: none;
    outline: none;
    top: 6.9vh;
    width: 87%;
    margin: 0 auto;
    left: 0;
    right: 0;
    opacity: 1;
    height: 2.5vh;
    border-bottom: .1vh solid #f5f5f5ad;
    text-indent: 2.5vh;
    color: whitesmoke;
}

.employment-lists {
    position: absolute;
    width: 87.0%;
    height: 46.5vh;
    top: 11.8vh;
    margin: auto;
    left: 0;
    right: 0;
    overflow-x: hidden;
    overflow-y: scroll;
}

.employment-lists::-webkit-scrollbar {
    display: none;
}

.employment-list {
    position: relative;
    width: 100%;
    color: white;
    height: 6vh;
    margin-bottom: 8px;
    background-color: rgb(44, 70, 95);
    box-shadow: rgba(0, 0, 0, 0.557) 0rem 0rem 0.1rem 0.01rem;
    border-bottom: .1vh solid #fff;
}

.employment-job-list {
    position: relative;
    width: 100%;
    color: white;
    height: 6vh;
    margin-bottom: 8px;
    background-color: rgb(44, 70, 95);
    box-shadow: rgba(0, 0, 0, 0.557) 0rem 0rem 0.1rem 0.01rem;
    border-bottom: .1vh solid #fff;
}

.employment-job-list:hover {
    background-color: #15222e;
}

.employment-icon {
    position: absolute;
    margin: .7vh;
    margin-left: 1.0vh;
    text-align: center;
    line-height: 4.5vh;
    color: white;
    font-size: 4.0vh;
}

.employment-job-icon {
    position: absolute;
    margin: .7vh;
    margin-left: 1.5vh;
    text-align: center;
    line-height: 4.5vh;
    color: white;
    font-size: 4.5vh;
}

.employment-label {
    position: absolute;
    left: 7.4vh;
    color: white;
    line-height: 2.7vh;
    font-size: 1.4vh;
    max-width: 65%;
    white-space: nowrap;
    overflow: hidden !important;
    text-overflow: ellipsis;
}

.employment-grade {
    position: absolute;
    left: 7.4vh;
    color: white;
    line-height: 8vh;
    font-size: 1.2vh;
    max-width: 65%;
    white-space: nowrap;
    overflow: hidden !important;
    text-overflow: ellipsis;
}

/* NEW HEADER SHIT */

#employment-job-search-text {
    position: absolute;
    top: 4.7vh;
    left: 5.5vh;
    font-family: 'Roboto', sans-serif;
    font-size: 1.2vh;
    color: #FFFFFF;
}

#employment-job-search-icon {
    position: absolute;
    top: 7.3vh;
    left: 5.5vh;
    font-size: 1.4vh;
    color: #FFFFFF;
}

#employment-job-back-icon {
    position: absolute;
    top: 6vh;
    left: 2.5vh;
    font-size: 2.1vh;
    color: #FFFFFF;
}

#employment-job-extras-icon {
    position: absolute;
    top: 4vh;
    right: 2.5vh;
    font-size: 2.1vh;
    color: #FFFFFF;
}

#employment-job-search {
    display: block;
    position: absolute;
    background: none;
    border: none;
    top: 6.9vh;
    width: 75%;
    margin: 0 auto;
    left: 3.4vh;
    right: 0;
    height: 2.5vh;
    border-bottom: .1vh solid #f5f5f5ad;
    outline: none;
    text-indent: 2.5vh;
    color: whitesmoke;
}

/* DROP DOWN MENU */

.phone-dropdown-menu{
    display: none;
    position: absolute;
    padding-left: 9.5vh;
    padding-top: 4vh;
    width: 80px;
    height: 100px;
}

.list-content{
    position: relative;
    color: white;
    height: 35px;
    width: 180px;
    overflow: hidden;
    margin: auto;
    font-family: 'Robotto', sans-serif;
    font-size: 1.3vh;
    background-color: #484444;
}
.list-content >i{
    padding:  10px 10px 0px 10px;

}

.list-content:hover{
    background-color: #585454;
}

/* Action Buttons */

.employment-action-buttons {
    visibility: hidden;
    position: absolute;
    height: 100%;
    width: 100%;
    padding-bottom: 5.1vh;
    left: 0;
    right: 0;
}

.employment-action-buttons > i {
    position: relative;
    float: left;
    margin-left: 1.8vh;
    left: 4vh;
    top: 2.1vh;
    font-size: 1.8vh;
    color: rgb(255, 255, 255);
    text-align: center;
}

.employment-action-buttons > i:hover {
    color: #2c465f;
}

.employment-job-list:hover .employment-action-buttons {
    background: #0d1218c0;
    visibility: visible;
}

/* Employment Text Area BS */ 

#employment-chargemf-note {
    border: none;
    height: 15vh;
    margin: 0 auto;
    left: 0;
    right: 0;
    outline: none;
    resize: none;
    padding: 0.87vh;
    font-size: 1.4vh;
    top: 12vh;
    width: 80%;
    margin-left: 10%;
    background: none;
    border-bottom: .1vh solid #f5f5f5ad;
    color: whitesmoke;
    font-size: 1.75vh;
}

#employment-chargemf-note:focus {
    border-bottom: .1vh solid #8ee074;
}


#employment-chargemf-note::-webkit-inner-spin-button,
#employment-chargemf-note::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

#employment-chargemf-note::-webkit-scrollbar {
	width: 0.2vh;
}

#employment-chargemf-note::-webkit-scrollbar-thumb {
    background: whitesmoke;
}

